--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:id="@+id/swipeRefresh"
     android:focusable="false"
-    tools:context=".home.homefragments.Teams"
+    tools:context=".home.fragments.Teams"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
