--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
 
         <item name="fragmentsBackground">@color/pastel</item>
         <item name="shimmerColor">@color/shimmer</item>
+        <item name="spinnerColor">@color/spinnerLight</item>
         <item name="buttonText">@color/white</item>
         <item name="buttonIconTint">@color/white</item>
 
