--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -120,7 +120,7 @@
                 android:layout_height="match_parent"
                 android:inputType="text"
                 android:textColor="@color/disabled"
-                android:enabled="false"
+                android:enabled="true"
                 android:clickable="true"
                 android:textSize="16sp"
                 android:paddingStart="15dp"/>
