--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -7,7 +7,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".home.homefragments.Notifications">
+    tools:context=".home.fragments.Notifications">
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
