--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:layout_width="match_parent"
+<RelativeLayout
     android:layout_height="match_parent"
-    android:id="@+id/swipeRefresh"
+    android:layout_width="match_parent"
     android:focusable="false"
     tools:context=".home.fragments.Teams"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipeRefresh"
+    >
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,3 +75,12 @@
 
 </FrameLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+<ProgressBar
+android:id="@+id/loadingProgressBar"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_centerInParent="true"
+android:visibility="gone" />
+
+</RelativeLayout>
