--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -87,6 +87,7 @@
 
                 <Spinner
                     android:id="@+id/spinnerTeam"
+                    android:entries="@array/period_array"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
