--- a/app/src/main/res/layout/members_layout.xml
+++ b/app/src/main/res/layout/members_layout.xml
@@ -31,18 +31,41 @@
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp">
 
-            <TextView
-                android:id="@+id/txtFullname"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="Rafael Guerra Evangelista"
-                android:textSize="14sp"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textStyle="bold"
-                android:layout_gravity="bottom"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:layout_marginEnd="5dp"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txtFullname"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    tools:text="Rafael Guerra"
+                    android:textSize="14sp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textStyle="bold"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_marginEnd="5dp" />
+
+                <TextView
+                    android:id="@+id/txtView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ver Perfil"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
+                    android:clickable="true"
+                    android:textColor="?android:attr/textColorSecondary"
+                    android:layout_gravity="bottom"
+                    android:layout_marginStart="5dp" /> <!-- Add margin for spacing -->
+
+            </LinearLayout>
+
+
+
 
             <TextView
                 android:id="@+id/txtUsername"
@@ -64,6 +87,8 @@
                 android:textSize="14sp"
                 android:textColor="?android:attr/textColorSecondary"
                 android:layout_gravity="bottom"/>
+
+
 
 
         </LinearLayout>
