--- a/app/src/main/res/layout/notifications_layout.xml
+++ b/app/src/main/res/layout/notifications_layout.xml
@@ -11,17 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp">
 
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgUser"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@drawable/default_image"
-            tools:src="@drawable/r"
-            android:clickable="true"
-            android:layout_marginStart="10dp"
+        <ImageView
+            android:id="@+id/imgIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/chart"
             android:layout_gravity="center"/>
 
         <LinearLayout
@@ -32,85 +30,55 @@
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txtFullname"
+                    android:id="@+id/txtTitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    tools:text="Rafael Guerra"
-                    android:textSize="14sp"
+                    tools:text="Título"
+                    android:textSize="16sp"
                     android:textColor="?android:attr/textColorPrimary"
                     android:textStyle="bold"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:layout_marginEnd="5dp" />
-
             </LinearLayout>
 
             <TextView
-                android:id="@+id/txtUsername"
+                android:id="@+id/txtSubtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                tools:text="\@rafaelguerra"
-                android:textSize="12sp"
-                android:textColor="?android:attr/textColorSecondary"
-                android:layout_gravity="bottom"/>
-
-            <TextView
-                android:id="@+id/txtRole"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                tools:text="Administrador"
-                android:textStyle="bold"
+                tools:text="Subtítulo"
                 android:textSize="14sp"
                 android:textColor="?android:attr/textColorSecondary"
                 android:layout_gravity="bottom"/>
 
-
+            <TextView
+                android:id="@+id/txtTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                tools:text="Há 2 horas"
+                android:textSize="12sp"
+                android:textColor="?android:attr/textColorSecondary"
+                android:layout_gravity="bottom"/>
 
 
         </LinearLayout>
-        <ImageButton
-            android:id="@+id/btnEditRole"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="end|center"
-            android:contentDescription="ButtonEditHole"
-            android:src="@drawable/baseline_edit_24"
-            android:background="@color/transparent"
-            app:tint="?android:attr/iconTint"
-            android:scaleType="fitXY"
-            android:layout_marginEnd="10dp"
-            android:visibility="gone"/>
 
         <ImageButton
-            android:id="@+id/btnRemove"
+            android:id="@+id/btnInvite"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
-            android:src="@drawable/baseline_close_24"
-            android:background="@color/transparent"
-            app:tint="?android:attr/iconTint"
-            android:scaleType="fitXY"
-            android:layout_marginEnd="10dp"
-            android:visibility="gone"/>
-
-        <ImageButton
-            android:id="@+id/btnExitTeam"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="end|center"
-            android:contentDescription="ButtonRemoveUser"
-            android:src="@drawable/baseline_logout_24"
+            android:src="@drawable/baseline_invite"
             android:background="@color/transparent"
             app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
