--- a/app/src/main/res/layout/fragment_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_team_bottom_sheet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:focusable="false"
     android:fillViewport="true">
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +25,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp">
 
@@ -90,3 +94,14 @@
     </LinearLayout>
 
 </ScrollView>
+
+
+<View
+android:layout_width="40dp"
+android:layout_height="5dp"
+android:layout_marginTop="10dp"
+android:background="@drawable/image_shape"
+android:backgroundTint="?attr/shimmerColor"
+android:layout_centerHorizontal="true"/>
+
+</RelativeLayout>
