--- a/app/src/main/res/layout/fragment_team_members.xml
+++ b/app/src/main/res/layout/fragment_team_members.xml
@@ -31,7 +31,7 @@
         android:layout_marginBottom="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtMember"
+            android:id="@+id/txtSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
