--- a/app/src/main/res/layout/fragment_team_members.xml
+++ b/app/src/main/res/layout/fragment_team_members.xml
@@ -48,7 +48,7 @@
             android:src="@drawable/baseline_member_add"
             app:tint="@color/white"
             android:layout_marginStart="5dp"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
     </LinearLayout>
 
