--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -77,7 +77,20 @@
                 android:enabled="true"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="2dp"/>
+
+            <TextView
+                android:id="@+id/txtErrorUsername"
+                android:text="Nome de Usuário já está em uso, altere o nome de usuário"
+                android:layout_gravity="start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:layout_marginStart="12dp"
+                android:layout_marginBottom="5dp"
+                android:visibility="gone"/>
 
             <TextView
                 android:text="Email"
@@ -87,7 +100,8 @@
                 android:textColor="?android:attr/textColorPrimary"
                 android:textSize="12sp"
                 android:layout_marginStart="12dp"
-                android:layout_marginBottom="2dp"/>
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="3dp"/>
 
             <EditText
                 android:id="@+id/txtEmail"
@@ -99,7 +113,8 @@
                 android:enabled="true"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                />
 
         </LinearLayout>
 
@@ -162,7 +177,7 @@
                 android:id="@+id/spinnerGender"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:spinnerMode="dialog"
+                android:spinnerMode="dropdown"
                 android:background="@drawable/spinner_background"
                 android:layout_marginBottom="5dp"
                 />
@@ -220,37 +235,79 @@
 
             </LinearLayout>
 
-            <Button
-                android:layout_marginTop="10dp"
-                android:id="@+id/btnAction"
+            <FrameLayout
+                android:id="@+id/btnActionContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CONTINUAR"
-                style="@style/CustomButtonStyle"
-                android:textStyle="bold"/>
+                android:layout_marginTop="10dp">
 
-            <Button
-                android:layout_marginTop="10dp"
-                android:id="@+id/btnSignUp"
+                <Button
+                    android:id="@+id/btnAction"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="CONTINUAR"
+                    style="@style/CustomButtonStyle"
+                    android:textStyle="bold"/>
+
+                <ProgressBar
+                    android:id="@+id/progressBarAction"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:indeterminateTint="@color/white"
+                    android:indeterminateTintMode="src_in"/>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/btnSignUpContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CADASTRAR"
-                style="@style/CustomButtonStyle"
-                android:textStyle="bold"
-                android:visibility="gone"/>
+                android:layout_marginTop="10dp"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/btnSignUp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="CADASTRAR"
+                    style="@style/CustomButtonStyle"
+                    android:textStyle="bold"/>
+
+                <ProgressBar
+                    android:id="@+id/progressBarSignUp"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:indeterminateTint="@color/white"
+                    android:indeterminateTintMode="src_in"/>
+            </FrameLayout>
 
         </LinearLayout>
     </ScrollView>
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@null"
-        android:contentDescription="backButton"
-        app:tint="?android:attr/iconTint"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:scaleType="fitXY"
-        android:layout_margin="15dp"
-        android:layout_gravity="top|start"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="top"
+        android:background="?android:attr/colorBackground">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@null"
+            android:contentDescription="BackButton"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:scaleType="fitXY"
+            app:tint="?android:attr/iconTint"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_vertical"
+            android:clickable="true"/>
+
+    </LinearLayout>
 </RelativeLayout>
