--- a/app/src/main/res/layout/activity_teamoverview.xml
+++ b/app/src/main/res/layout/activity_teamoverview.xml
@@ -37,14 +37,19 @@
             app:tabSelectedTextColor="?android:attr/textColorPrimary"
             app:tabTextColor="?android:attr/textColorPrimary" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="0dp"/>
-
+    </ScrollView>
     </LinearLayout>
 </RelativeLayout>
