--- a/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_create_team_bottom_sheet.xml
@@ -39,79 +39,172 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Nome da Equipe"
-                android:layout_marginBottom="20dp">
+        <TextView
+            android:text="Nome da Equipe"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="2dp"/>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtTeamName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="text"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
+            android:id="@+id/txtTeamName"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="\@ da Equipe"
-            android:layout_marginBottom="20dp">
+            android:inputType="text"
+            android:hint="ex.: Ecosynergy"
+            android:background="@drawable/spinner_background"
+            android:enabled="true"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtHandle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:text="\@ da Equipe"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="2dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
+            android:id="@+id/txtHandle"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Descrição"
-            android:layout_marginBottom="20dp">
+            android:inputType="text"
+            android:hint="ex.: @ecosynergyofc"
+            android:background="@drawable/spinner_background"
+            android:enabled="true"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtDescription"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:text="Descrição"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="2dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
+            android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Fuso horário"
-            android:layout_marginBottom="20dp">
+            android:inputType="text"
+            android:hint="ex.: Setor de emissões de CO2"
+            android:background="@drawable/spinner_background"
+            android:enabled="true"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
 
-            <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                android:id="@+id/txtTimezone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"
-                android:textColor="@color/disabled"
-                android:enabled="true"
-                android:clickable="true"
-                android:textSize="16sp"
-                android:paddingStart="15dp"/>
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:text="Fuso horário"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="2dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <AutoCompleteTextView
+            android:id="@+id/txtTimezone"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Meta de Emissões"
-            android:layout_marginBottom="20dp">
+            android:inputType="text"
+            android:hint="ex.: (UTC-03:00) Brasilia"
+            android:background="@drawable/spinner_background"
+            android:enabled="true"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtGoal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+        <TextView
+            android:text="Metas de Emissões"
+            android:layout_gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="12sp"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="2dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/txtDailyGoal"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:inputType="numberDecimal"
+            android:hint="Diária"
+            android:background="@drawable/spinner_background"
+            android:enabled="true"
+            android:textSize="16sp"
+            android:paddingStart="15dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"/>
+            <EditText
+                android:id="@+id/txtWeeklyGoal"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
                 android:inputType="numberDecimal"
+                android:hint="Semanal"
+                android:background="@drawable/spinner_background"
                 android:enabled="true"
-                android:clickable="true"
-                android:textSize="16sp"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:textSize="16sp"
+                android:paddingStart="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/txtMonthlyGoal"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:inputType="numberDecimal"
+                android:hint="Mensal"
+                android:background="@drawable/spinner_background"
+                android:enabled="true"
+                android:textSize="16sp"
+                android:paddingStart="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"/>
+
+            <EditText
+                android:id="@+id/txtAnnualGoal"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:inputType="numberDecimal"
+                android:hint="Anual"
+                android:background="@drawable/spinner_background"
+                android:enabled="true"
+                android:textSize="16sp"
+                android:paddingStart="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"/>
+
+        </LinearLayout>
 
         <TextView
             android:text="Atividade/Setor"
@@ -132,20 +225,6 @@
             android:spinnerMode="dialog"
             android:background="@drawable/spinner_background"
             android:layout_marginBottom="20dp"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Plano"
-            android:layout_marginBottom="20dp"
-            android:visibility="gone">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtPlan"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="text"/>
-        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnCreateTeam"
